# esc

./: .gitignore  .readthedocs.yaml  .style.yapf  .tmux-tui-command  CHANGES.md  CLAUDE.md  INTENTS-2026-04-29-13-13.md  INTENTS-2026-04-29-13-29.md  README.md  TODO.md  TODO.txt  builtin_stubs.py  commands.py  consts.py  display.py  function_loader.py  functionmanagement.py  functions.py  helpme.py  history.py  main.py  menus.py  modes.py  oops.py  pylintrc  pyproject.toml  pytest.ini  registers.py  requirements.txt  requirements_dev.txt  setup.py  stack.py  status.py  util.py
.github/workflows/: ci.yml  publish.yml
_ci/: azure-pipelines.yml
docs/: beginners.md  conf.py  extending.md  index.rst  manual.md
docs/hacking-esc/: classref.rst  constants.rst  debugging.rst  index.rst  menus.rst  modes.rst  operations.rst  unit-handling.rst
docs/old/: extending.md  manual.md
docs/using-esc/: concepts.rst  exercises.rst  index.rst  install.rst  notation.rst  plugins.rst  units.rst
esc/: __main__.py  builtin_stubs.py  cli.py  commands.py  consts.py  display.py  functest.py  function_loader.py  functions.py  helpme.py  history.py  layout.py  modes.py  oops.py  registers.py  stack.py  status.py  units.py  util.py
esc-plugins/: log.py  misc.py  times.py  trig.py
old/: Makefile  main.c
package_scripts/: esc
scripts/: deploy_to_pypi.sh  pre_commit.sh
tests/esc/: test_functest.py  test_functest_adapter.py  test_helpme.py  test_history.py  test_layout.py  test_registry.py  test_stackitem.py  test_stackstate.py  test_units.py  test_util.py
